--- a/LICENCE.rdoc
+++ b/LICENCE.rdoc
@@ -1,6 +1,6 @@
 = The MIT Licence
 
-Copyright (c) 2011 Lawrence Woodman
+Copyright (c) 2011-2012 Lawrence Woodman
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
